# r3make

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
cbuild/: __init__.py  build.py  commands.py  config.py  fetch.py  utils.py  version.py
cbuild/compiler/: basecompiler.py
cbuild/compilers/: __init__.py  emscripten.py  instance.py  mingw.py
r3make/: __init__.py  build.py  cli.py  commands.py  config.py  core.py  fetch.py  gitdeps.py  util.py  utils.py  version.py
r3make/compiler/: __init__.py  basecompiler.py
